; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_match_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/i2c/extr_i2c-core.c_i2c_match_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2c_device_id = type { i64* }
%struct.i2c_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.i2c_device_id* (%struct.i2c_device_id*, %struct.i2c_client*)* @i2c_match_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.i2c_device_id* @i2c_match_id(%struct.i2c_device_id* %0, %struct.i2c_client* %1) #0 {
  %3 = alloca %struct.i2c_device_id*, align 8
  %4 = alloca %struct.i2c_device_id*, align 8
  %5 = alloca %struct.i2c_client*, align 8
  store %struct.i2c_device_id* %0, %struct.i2c_device_id** %4, align 8
  store %struct.i2c_client* %1, %struct.i2c_client** %5, align 8
  br label %6

6:                                                ; preds = %24, %2
  %7 = load %struct.i2c_device_id*, %struct.i2c_device_id** %4, align 8
  %8 = getelementptr inbounds %struct.i2c_device_id, %struct.i2c_device_id* %7, i32 0, i32 0
  %9 = load i64*, i64** %8, align 8
  %10 = getelementptr inbounds i64, i64* %9, i64 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %27

13:                                               ; preds = %6
  %14 = load %struct.i2c_client*, %struct.i2c_client** %5, align 8
  %15 = getelementptr inbounds %struct.i2c_client, %struct.i2c_client* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.i2c_device_id*, %struct.i2c_device_id** %4, align 8
  %18 = getelementptr inbounds %struct.i2c_device_id, %struct.i2c_device_id* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = call i64 @strcmp(i32 %16, i64* %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %13
  %23 = load %struct.i2c_device_id*, %struct.i2c_device_id** %4, align 8
  store %struct.i2c_device_id* %23, %struct.i2c_device_id** %3, align 8
  br label %28

24:                                               ; preds = %13
  %25 = load %struct.i2c_device_id*, %struct.i2c_device_id** %4, align 8
  %26 = getelementptr inbounds %struct.i2c_device_id, %struct.i2c_device_id* %25, i32 1
  store %struct.i2c_device_id* %26, %struct.i2c_device_id** %4, align 8
  br label %6

27:                                               ; preds = %6
  store %struct.i2c_device_id* null, %struct.i2c_device_id** %3, align 8
  br label %28

28:                                               ; preds = %27, %22
  %29 = load %struct.i2c_device_id*, %struct.i2c_device_id** %3, align 8
  ret %struct.i2c_device_id* %29
}

declare dso_local i64 @strcmp(i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
